Added initial configuration for data acces, states, page facades and components for works
