# libs/data-access/apis/billing-api/src/lib/model/problemDetails.ts
@@ -1,0 +1,22 @@
+/**
+ *  Billing Api 
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface ProblemDetailsBillingModel { 
+  [key: string]: any | any;
+
+
+    type?: string | null;
+    title?: string | null;
+    status?: number | null;
+    detail?: string | null;
+    instance?: string | null;
+}
+
